<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#feb236">

    <Button
        android:id="@+id/statistics"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="272dp"
        android:background="@drawable/button_spielen"
        android:fontFamily="monospace"
        android:onClick="statiscticsButtonClick"
        android:text="@string/StatisticsButton"
        android:textColor="#D8D7D7"
        android:textSize="24sp"
        android:textStyle="bold"
        app:iconTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:fontFamily="monospace"
        android:text="@string/HomeMenue"
        android:textColor="#D64161"
        android:textColorLink="#D64161"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="196dp"
        android:background="@drawable/button_spielen"
        android:fontFamily="monospace"
        android:onClick="playButtonClick"
        android:text="@string/SpielenButton"
        android:textColor="#D8D7D7"
        android:textSize="24sp"
        android:textStyle="bold"
        app:iconTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
</androidx.constraintlayout.widget.ConstraintLayout>